Update scrolling cards and font size

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				
 				<section class="section-scrolling">
 					<div class="scrolling-container">
-						<div class="tiled-list-card">
+						<div class="tiled-list-card first-card">
 							<h4>Action</h4>
 							<div class="card-tiled-list">
 								<div class="tile"><a href="https://kitsu.io/anime/boku-no-hero-academia"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/11469/large.jpg?1456690771" alt="My Hero Academia"></img></a></div>
