Update font size and spacing

--- a/index.html
+++ b/index.html
@@ -20,19 +20,23 @@
 			<div id="header" class="page-item">		
 				<h1>My Anime Profile</h1>
 				
-				<section class="section-header bio">
-					<h2>Kyle</h2>					
-					<p>I enjoy visually pleasing art and enjoyable characters, but overall a thought provoking story. Sucker for romance, get pumped for action packed fight scenes, and savor unexpected laughs; occasional trash.</p>
-					<p>Studio Bones | Crimson Redheads | Tsunderes | Dub Club</P>
-					<p class="bioextra"><i class="far fa-calendar" aria-hidden="true"></i> Watching Since 2002</p>
-					<p class="bioextra"><i class="far fa-heart"></i> Waifu:  <img class="waifu" src="assets/images/icons/waifu.png"></img>  Shirayuki</p>
+				<section class="section-header">
+					<h2 id="name">Kyle</h2>
+				</section>				
+				<section class="section-header">
+					<p class="bio">I enjoy visually pleasing art and enjoyable characters, but overall a thought provoking story. Sucker for romance, get pumped for action packed fight scenes, and savor unexpected laughs; occasional trash.</p>
+					<p class="bio">Studio Bones | Crimson Redheads | Tsunderes | Dub Club</P>
 				</section>
-				<section class="section-header social">
+				<section class="section-header">				
+					<p class="bioextra"><i class="far fa-calendar" aria-hidden="true"></i> Watching Since 2002</p>
+					<p class="bioextra"><i class="far fa-heart"></i> Waifu: <img class="waifu" src="assets/images/icons/waifu.png"></img>  Shirayuki</p>
+				</section>
+				<!--<section class="section-header social">
 					<p class="social-button"><img class="social-icon" src="assets/images/icons/MAL.ico"></img> @gotKPerks</p>
 					<p class="social-button"><img class="social-icon" src="assets/images/icons/kitsu.ico"></img> @gotKPerks</p>
 					<p class="social-button"><i class="fab fa-twitter"></i> @gotKPerks</p>
 					<p class="social-button"><i class="fab fa-discord" aria-hidden="true"></i> gotKPerks #4655</p>
-				</section>
+				</section>-->
 			</div><!--heater-->
 
 			<div id="main" class="page-item main-grid-layout">
