--- a/index.html
+++ b/index.html
@@ -260,7 +260,14 @@
 						<div class="stack-item stack-link"><a class="" href="https://myanimelist.net/forum/?topicid=1692966">Dubbed Schedule</a></div>						
 						
 						<div class="stack-item stack-icon"><a href="https://www.reddit.com/r/Animedubs/"><img class="stack-icon-image" src="https://styles.redditmedia.com/t5_2ur9o/styles/communityIcon_ctplq0oyuxp01.png"></img></a></div>
-						<div class="stack-item stack-link"><a class="" href="https://www.reddit.com/r/Animedubs/">r/Animedubs</a></div>											
+						<div class="stack-item stack-link"><a class="" href="https://www.reddit.com/r/Animedubs/">r/Animedubs</a></div>				
+
+						<div class="stack-item stack-icon"><a href="https://twitter.com/KylePhillipsFUN"><img class="stack-icon-image" src="https://pbs.twimg.com/profile_images/1145888332267868162/HtRXYMKl_400x400.jpg"></img></a></div>
+						<div class="stack-item stack-link"><a class="" href="https://twitter.com/KylePhillipsFUN">@KylePhillipsFUN</a></div>						
+
+						<div class="stack-item stack-icon"><a href="https://twitter.com/CliffordChapin"><img class="stack-icon-image" src="https://pbs.twimg.com/profile_images/1216553666141925381/6euUqClb_400x400.jpg"></img></a></div>
+						<div class="stack-item stack-link"><a class="" href="https://twitter.com/CliffordChapin">@CliffordChapin</a></div>						
+						
 					</div>
 				</section>
 				<section class="section-sidebar">
