--- a/index.html
+++ b/index.html
@@ -251,6 +251,20 @@
 				</section>-->			
 
 				<section class="section-sidebar">
+					<h3>Anime General</h3>				
+					<div class="stack-list-container">
+						<div class="stack-item stack-icon"><a href="https://www.livechart.me/"><img class="stack-icon-image" src="https://www.livechart.me/favicon.ico"></img></a></div>
+						<div class="stack-item stack-link"><a class="" href="https://www.livechart.me/">livechart.me</a></div>						
+
+						<div class="stack-item stack-icon"><a href="https://because.moe/"><img class="stack-icon-image" src="https://because.moe/favicon.ico"></img></a></div>
+						<div class="stack-item stack-link"><a class="" href="https://because.moe/">because.moe</a></div>						
+
+						<div class="stack-item stack-icon"><a href="https://www.reddit.com/r/anime/"><img class="stack-icon-image" src="https://styles.redditmedia.com/t5_2qh22/styles/communityIcon_0z77za65x1941.png"></img></a></div>
+						<div class="stack-item stack-link"><a class="" href="https://www.reddit.com/r/anime/">r/anime</a></div>						
+						
+					</div>	
+				</section>
+				<section class="section-sidebar">
 					<h3>The Dubs</h3>
 					<div class="stack-list-container">
 						<div class="stack-item stack-icon"><a href="https://www.english-dubbed.com/"><img class="stack-icon-image" src="assets/images/icons/eng-dub-icon.png"></img></a></div>
@@ -272,13 +286,16 @@
 				</section>
 				<section class="section-sidebar">
 					<h3>For Collections</h3>
-					<!--
-						BD/DVD Dubbed Releases
-						r/AnimeDeals
-						Collectors Club (kitsu)
-						r/AnimeCollectors (reddid)						
-						r/animeicons
-					-->
+					<div class="stack-list-container">					
+						<div class="stack-item stack-icon"><a href="https://www.english-dubbed.com/knowledge-bazaar/upcoming-english-dubbed-release-dates/"><img class="stack-icon-image" src="assets/images/icons/eng-dub-icon.png"></img></a></div>
+						<div class="stack-item stack-link"><a class="" href="https://www.english-dubbed.com/knowledge-bazaar/upcoming-english-dubbed-release-dates/">BD/DVD Dubbed Releases</a></div>						
+
+						<div class="stack-item stack-icon"><a href="https://www.reddit.com/r/AnimeDeals/new/"><img class="stack-icon-image" src="assets/images/icons/reddit-icon.jpg"></img></a></div>
+						<div class="stack-item stack-link"><a class="" href="https://www.reddit.com/r/AnimeDeals/new/">r/AnimeDeals</a></div>						
+
+						<div class="stack-item stack-icon"><a href="https://www.reddit.com/r/animeicons/"><img class="stack-icon-image" src="assets/images/icons/reddit-icon.jpg"></img></a></div>
+						<div class="stack-item stack-link"><a class="" href="https://www.reddit.com/r/animeicons/">r/animeicons</a></div>						
+					</div>
 				</section>					
 				<section class="section-sidebar">					
 					<h3>Anitube</h3>
