--- a/index.html
+++ b/index.html
@@ -261,7 +261,12 @@
 
 						<div class="stack-item stack-icon"><a href="https://www.reddit.com/r/anime/"><img class="stack-icon-image" src="https://styles.redditmedia.com/t5_2qh22/styles/communityIcon_0z77za65x1941.png"></img></a></div>
 						<div class="stack-item stack-link"><a class="" href="https://www.reddit.com/r/anime/">r/anime</a></div>						
-						
+
+						<div class="stack-item stack-icon"><a href="https://twitter.com/AnimeNewsNet"><img class="stack-icon-image" src="https://pbs.twimg.com/profile_images/199100222/ANN_Logo_dots_400x400.png"></img></a></div>
+						<div class="stack-item stack-link"><a class="" href="https://twitter.com/AnimeNewsNet">@AnimeNewsNet</a></div>						
+
+						<div class="stack-item stack-icon"><a href="https://twitter.com/AIR_News01"><img class="stack-icon-image" src="https://pbs.twimg.com/profile_images/1187230161625763840/kX7SOmHa_400x400.jpg"></img></a></div>
+						<div class="stack-item stack-link"><a class="" href="https://twitter.com/AIR_News01">@AIR_News01</a></div>																	
 					</div>	
 				</section>
 				<section class="section-sidebar">
