Update responsive margins and link focus styles

--- a/index.html
+++ b/index.html
@@ -29,19 +29,20 @@
 					<p class="bioextra"><i class="far fa-calendar" aria-hidden="true"></i> Watching Since 2002</p>
 					<p class="bioextra"><i class="far fa-heart"></i> Waifu: <img class="waifu" src="assets/images/icons/waifu.png"></img> Shirayuki</p>
 				</section>
-				<!--<section class="section-header social">
-					<p class="social-button"><img class="social-icon" src="assets/images/icons/mal-icon.png"></img> @gotKPerks</p>
-					<p class="social-button"><img class="social-icon" src="assets/images/icons/kitsu.ico"></img> @gotKPerks</p>
-					<p class="social-button"><i class="fab fa-twitter"></i> @gotKPerks</p>
-					<p class="social-button"><i class="fab fa-discord" aria-hidden="true"></i> gotKPerks #4655</p>
-				</section>-->
 			</div><!--heater-->
 
 			<div id="main" class="page-item main-grid-layout">
+			
+				<!--tabs
+					Spotlight
+					Favorites
+					Likes and follows
+				-->
+			
 				<section class="section-main anime">
 					<h2>Anime</h2>
 					<div class="tiled-list">
-						<div class="tile"><a href="https://kitsu.io/anime/soul-eater"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/3128/large.jpg?1417748138" alt="Soul Eater"></img></a></div>
+						<div class="tile"><a href="https://kitsu.io/anime/soul-eater"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/3128/large.jpg?1417748138" alt="Soul Eater"></img></a></div>					
 						<div class="tile"><a href="https://kitsu.io/anime/fullmetal-alchemist-brotherhood"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/3936/large.jpg?1419000387" alt="Fullmetal Alchemist: Brotherhood"></img></a></div>
 						<div class="tile"><a href="https://kitsu.io/anime/spice-and-wolf"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/2684/large.jpg?1416428719" alt="Spice and Wolf"></img></a></div>
 						<div class="tile"><a href="https://kitsu.io/anime/code-geass-lelouch-of-the-rebellion"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/1415/large.jpg?1408443967" alt="Code Geass: Lelouch of the Rebellion"></img></a></div>
