update grid and layout changes

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 			<div class="page-item header-container">		
 				<h1>My Anime Profile</h1>
 				
-				<section class="section-header">
+				<section class="header-item">
 					<h2 id="name">Kyle</h2>
 				</section>				
-				<section class="section-header">
+				<section class="header-item">
 					<p class="bio">I enjoy visually pleasing art and enjoyable characters, but overall a thought provoking story. Sucker for romance, get pumped for action packed fight scenes, and savor unexpected laughs; occasional trash.</p>
 					<p class="bio">Studio Bones | Crimson Redheads | Tsunderes | Dub Club</P>
 					<p class="bioextra"><i class="far fa-calendar" aria-hidden="true"></i> Watching Since 2002</p>
