update grid dimensions and content

--- a/index.html
+++ b/index.html
@@ -176,9 +176,12 @@
 						<div class="tile"><a href="https://myanimelist.net/character/69411/Kaori_Miyazono"><img class="thumbnail" src="https://media.kitsu.io/characters/images/53369/original.jpg?1483096805" alt="Kaori Miyazono"></img></a></div>
 						<div class="tile"><a href="https://myanimelist.net/character/87271/Chiyo_Sakura"><img class="thumbnail" src="https://media.kitsu.io/characters/images/40593/original.jpg?1483096805" alt="Chiyo Sakura"></img></a></div>
 						<div class="tile"><a href="https://myanimelist.net/character/129073/Yun_Iijima"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/8/311599.jpg" alt="Yun Iijima"></img></a></div>
-						<div class="tile"><a href=""><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/11/320203.jpg" alt="Aqua "></img></a></div>
+						<div class="tile"><a href="https://myanimelist.net/character/117223/Aqua"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/11/320203.jpg" alt="Aqua "></img></a></div>
 						<div class="tile"><a href="https://myanimelist.net/character/144273/Hikari_Takanashi"><img class="thumbnail" src="https://media.kitsu.io/characters/images/85191/original.jpg?1485084383" alt="Hikari Takanashi"></img></a></div>
-						<div class="tile"><a href=""><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/14/353089.jpg" alt="Rin Shima"></img></a></div>
+						<div class="tile"><a href="https://myanimelist.net/character/152119/Rin_Shima"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/14/353089.jpg" alt="Rin Shima"></img></a></div>
+						<div class="tile"><a href="https://myanimelist.net/character/34470/Kurisu_Makise"><img class="thumbnail" src="https://media.kitsu.io/characters/images/32510/original.jpg?1483096805" alt="Kurisu Makise"></img></a></div>
+						<div class="tile"><a href="https://myanimelist.net/character/498/Rin_Toosaka"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/2/270529.jpg" alt="Rin Toosaka"></img></a></div>
+						<div class="tile"><a href="https://myanimelist.net/character/36828/Asuna_Yuuki"><img class="thumbnail" src="https://media.kitsu.io/characters/images/35731/original.jpg?1483096805" alt="Asuna Yuuki"></img></a></div>
 					</div>
 				<!-- female characters 
 					Shirayuki
@@ -217,9 +220,12 @@
 						<div class="tile"><a href="https://myanimelist.net/character/2075/Kamina?q=kamina"><img class="thumbnail" src="https://media.kitsu.io/characters/images/19268/original.jpg?1483096805" alt="Kamina"></img></a></div>
 						<div class="tile"><a href="https://myanimelist.net/character/390/Mugen?q=mugen"><img class="thumbnail" src="https://media.kitsu.io/characters/images/3877/original.jpg?1483096805" alt="Mugen"></img></a></div>
 						<div class="tile"><a href="https://myanimelist.net/character/2423/Jiraiya?q=jirai"><img class="thumbnail" src="https://media.kitsu.io/characters/images/226/original.jpg?1483096805" alt="Jiraiya"></img></a></div>
+						<div class="tile"><a href="https://myanimelist.net/character/16021/Rider"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/5/166349.jpg" alt="Rider Iskandar, King of Conquerors"></img></a></div>
 						<div class="tile"><a href="https://myanimelist.net/character/117921/All_Might?q=all%20might"><img class="thumbnail" src="https://media.kitsu.io/characters/images/61660/original.jpg?1483096805" alt="All Might"></img></a></div>
 						<div class="tile"><a href="https://myanimelist.net/character/109931/Arataka_Reigen"><img class="thumbnail" src="https://media.kitsu.io/characters/images/69858/original.jpg?1485078673" alt="Reigen"></img></a></div>
 						<div class="tile"><a href="https://myanimelist.net/character/73935/Saitama?q=saitama"><img class="thumbnail" src="https://media.kitsu.io/characters/images/57048/original.jpg?1483096805" alt="Saitama"></img></a></div>
+						<div class="tile"><a href="https://myanimelist.net/character/42528/Sinbad"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/16/182925.jpg" alt="Sinbad "></img></a></div>
+						<div class="tile"><a href="https://myanimelist.net/character/81367/Shiroe"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/9/274161.jpg" alt="Shiroe "></img></a></div>
 					</div>
 				</div><!--Male Characters-->
 				
