--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 					</div>
 					<div class="stack-item">
 						<a class="stack-link" href="https://www.reddit.com/r/anime/">
-							<img class="stack-image" src="https://styles.redditmedia.com/t5_2qh22/styles/communityIcon_0z77za65x1941.png"></img>
+							<img class="stack-image" src="https://b.thumbs.redditmedia.com/3Nje2BVH25RqYFX3Aod8R26GkHFzBYTep3TddA3960Q.png"></img>
 							<span class="stack-text">r/anime</span>
 						</a>
 					</div>		
@@ -347,13 +347,19 @@
 					</div>
 					<div class="stack-item">
 						<a class="stack-link" href="https://www.reddit.com/r/AnimeDeals/new/">
-							<img class="stack-image" src="assets/images/icons/reddit-icon.jpg"></img>
+							<img class="stack-image" src="assets/images/icons/animedeals-icon.png"></img>
 							<span class="stack-text">r/AnimeDeals</span>
 						</a>
 					</div>
 					<div class="stack-item">
-						<a class="stack-link" href="https://www.reddit.com/r/animeicons/">
+						<a class="stack-link" href="https://www.reddit.com/r/AnimeCollectors/">
 							<img class="stack-image" src="assets/images/icons/reddit-icon.jpg"></img>
+							<span class="stack-text">r/AnimeCollectors</span>
+						</a>
+					</div>					
+					<div class="stack-item">
+						<a class="stack-link" href="https://www.reddit.com/r/animeicons/">
+							<img class="stack-image" src="https://styles.redditmedia.com/t5_321ew/styles/communityIcon_qvnilxwvgjg41.png"></img>
 							<span class="stack-text">r/animeicons</span>
 						</a>
 					</div>					
@@ -455,7 +461,7 @@
 					</div>
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/sasurainopink">
-							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1212011108778688512/jaIJWaBf_400x400.jpg"></img>
+							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1238741536440909824/3R4lczhK_400x400.jpg"></img>
 							<span class="stack-text">@sasurainopink</span>
 						</a>
 					</div>
