--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
 	<body>
 		<div id="pagewrapper" class="page-grid">
 		
-			<div class="page-item header-container">		
-				<h1>My Anime Profile</h1>
-				
-				<section class="header-item">
+			<div class="page-item header-container grid-header">
+				<h1 class="page-header">My Anime Profile</h1>
+			</div>
+			<div class="page-item bio-container">			
+				<div class="bio-item">
 					<h2 id="name">Kyle</h2>
-				</section>				
-				<section class="header-item">
-					<p class="bio">I enjoy visually pleasing art and enjoyable characters, but overall a thought provoking story. Sucker for romance, get pumped for action packed fight scenes, and savor unexpected laughs; occasional trash.</p>
-					<p class="bio">Studio Bones | Crimson Redheads | Tsunderes | Dub Club</P>
+				</div>				
+				<div class="bio-item">
+					<p class="bio-text">I enjoy visually pleasing art and enjoyable characters, but overall a thought provoking story. I'm a sucker for romance, get pumped for action packed fight scenes, and savor unexpected laughs; with the occasional trash.</p>
+					<p class="bio-text">Studio Bones | Crimson Redheads | Tsunderes | Dub Club</P>
 					<p class="bioextra"><i class="far fa-calendar" aria-hidden="true"></i> Watching Since 2002</p>
 					<p class="bioextra"><i class="far fa-heart"></i> Waifu: <img class="waifu" src="assets/images/icons/waifu.png"></img> Shirayuki</p>
-				</section>
-			</div><!--heater-->
+				</div>
+			</div><!--bio-->
+
+			<div class="page-item main-header tab-container">
+				<div class="tab-item">Spotlight</div>
+				<div class="tab-item">Favorites</div>
+				<div class="tab-item">Links and Follows</div>
+			</div><!--tab-container-->
 
 			<div class="page-item main-container grid-main">
-			
-				<!--tabs
-					Spotlight
-					Favorites
-					Likes and follows
-				-->
-			
 				<div class="main-item tab-favorite"><!--anime Series-->
 					<h2>Anime Series</h2>
 					<div class="tiled-list">
@@ -254,7 +254,7 @@
 			</div><!--main-->
 			
 			<div class="page-item side-container tab-linksandfollows">
-			
+				<!--<h2>Links and Follows</h2>-->
 				<!--<div class="side-item stack-list-container">
 					<h3 class="stack-heading"></h3>				
 					<div class="stack-item">
