--- a/index.html
+++ b/index.html
@@ -257,7 +257,14 @@
 					Blood Blockade 
 					log horizon
 				-->
-			
+				<div class="main-item tab-favorite"><!--OPs-->
+					<h2>Anime OPs</h2>
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/zzJ8U8OtEsE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div><!--OPs-->
+				<div class="main-item tab-favorite"><!--EDs-->
+					<h2>Anime EDs</h2>
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/j3SlUmr_T4g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div><!--EDs-->				
 				<!-- fun facts -->
 				
 			</div><!--main-->
