small update, spacing and color

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<h2 id="name">Kyle</h2>
 				</div>				
 				<div class="bio-item">
-					<p class="bio-text">I enjoy visually pleasing art and enjoyable characters, but overall an immersive story. I'm a sucker for romance, get pumped for action packed fight scenes, and savor unexpected laughs; with the occasional trash.</p>
+					<p class="bio-text">I crave visually pleasing art and enjoyable characters, but overall an immersive story. I'm a sucker for romance, get pumped for action packed fight scenes, and savor unexpected laughs; with the occasional trash.</p>
 					<p class="bio-text">Studio Bones | Crimson Redheads | Tsunderes | Dub Club</P>
 					<p class="bioextra"><i class="far fa-calendar" aria-hidden="true"></i> Watching Since 2002</p>
 					<p class="bioextra"><i class="far fa-heart"></i> Waifu: <img class="waifu" src="assets/images/icons/waifu.png"></img> Shirayuki</p>
