update left side

--- a/index.html
+++ b/index.html
@@ -20,19 +20,24 @@
 			<div class="page-item header-container grid-header">
 				<h1 class="page-header">My Anime Profile</h1>
 			</div>
-			<div class="page-item bio-container">			
-				<div class="bio-item">
+			<div class="page-item left-side-container">			
+				<div class="left-side-item">
 					<h2 id="name">Kyle</h2>
-				</div>				
-				<div class="bio-item">
+				</div>						
+				<div class="left-side-item">
 					<p class="bio-text">I crave visually pleasing art and enjoyable characters, but overall an immersive story. I'm a sucker for romance, get pumped for action packed fight scenes, and savor unexpected laughs; with the occasional trash.</p>
+				</div>
+				<div class="left-side-item">
 					<p class="bio-text">Studio Bones | Crimson Redheads | Tsunderes | Dub Club</P>
-					<p class="bioextra"><i class="far fa-calendar" aria-hidden="true"></i> Watching Since 2002</p>
-					<p class="bioextra"><i class="far fa-heart"></i> Waifu: <img class="waifu" src="assets/images/icons/waifu.png"></img> Shirayuki</p>
+				</div>
+				
+				<div class="left-side-item bioextra">
+					<p class="bioextra-item"><i class="far fa-calendar" aria-hidden="true"></i> Watching Since 2002</p>
+					<p class="bioextra-item"><i class="far fa-heart"></i> Waifu: <img class="waifu" src="assets/images/icons/waifu.png"></img> Shirayuki</p>		
 				</div>
 			</div><!--bio-->
 
-			<div class="page-item main-header tab-container">
+			<div class="page-item tab-container">
 				<div class="tab-item">Spotlight</div>
 				<div class="tab-item">Favorites</div>
 				<div class="tab-item">Links and Follows</div>
