--- a/index.html
+++ b/index.html
@@ -237,16 +237,16 @@
 
 				<div class="main-item tab-favorite"><!--OPs-->
 					<h2>Anime OPs</h2>
-					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/zzJ8U8OtEsE"><span class="song-anime">Soul Eater,</span>"Resonance" by T.M. Revolution</a></div>
-					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/lkdi6eK05OA"><span class="song-anime">Your Lie in April,</span>"Hikaru Nara" by GooseHouse.</a></div>
-					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/4J8jcI0WtzM"><span class="song-anime">Blood Blockade Battlefront,</span>"Hello,world!" by Bump of Chicken</a></div>
-					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/Eq6EYcpWB_c"><span class="song-anime">Samurai Champloo,</span>"Battlecry" by Nujabes feat. Shing02</a></div>
-					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/6CBp4qylX6I"><span class="song-anime">No Game No Life,</span>"This Game" by Konomi Suzuki</a></div>
-					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/UjjTMNDZi-A"><span class="song-anime">Death Parade,</span>"Flyers" BRADIO</a></div>
-					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/atxYe-nOa9w"><span class="song-anime">One Punch Man,</span>"The Hero!! Set Fire to the Furious Fist" by JAM Project</a></div>
-					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/Ef_ZfhqN-ls"><span class="song-anime">New Game!,</span>"Sakura Skip" by Fourfolium</a></div>
-					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/SaKdpMnwZf0"><span class="song-anime">Domestic Girlfriend,</span>"Kawaki wo Ameku" by Minami</a></div>
-					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/aZenmeRytEM"><span class="song-anime">Noragami Aragoto,</span>"Kyouran Hey Kids!" by The Oral Cigarettes</a></div>
+					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/zzJ8U8OtEsE"><span class="song-anime">Soul Eater,</span><span class="song-title">"Resonance" by T.M. Revolution</span></a></div>
+					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/lkdi6eK05OA"><span class="song-anime">Your Lie in April,</span><span class="song-title">"Hikaru Nara" by GooseHouse.</span></a></div>
+					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/4J8jcI0WtzM"><span class="song-anime">Blood Blockade Battlefront,</span><span class="song-title">"Hello,world!" by Bump of Chicken</span></a></div>
+					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/Eq6EYcpWB_c"><span class="song-anime">Samurai Champloo,</span><span class="song-title">"Battlecry" by Nujabes feat. Shing02</span></a></div>
+					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/6CBp4qylX6I"><span class="song-anime">No Game No Life,</span><span class="song-title">"This Game" by Konomi Suzuki</span></a></div>
+					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/UjjTMNDZi-A"><span class="song-anime">Death Parade,</span><span class="song-title">"Flyers" BRADIO</span></a></div>
+					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/atxYe-nOa9w"><span class="song-anime">One Punch Man,</span><span class="song-title">"The Hero!! Set Fire to the Furious Fist" by JAM Project</span></a></div>
+					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/Ef_ZfhqN-ls"><span class="song-anime">New Game!,</span><span class="song-title">"Sakura Skip" by Fourfolium</span></a></div>
+					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/SaKdpMnwZf0"><span class="song-anime">Domestic Girlfriend,</span><span class="song-title">"Kawaki wo Ameku" by Minami</span></a></div>
+					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/aZenmeRytEM"><span class="song-anime">Noragami Aragoto,</span><span class="song-title">"Kyouran Hey Kids!" by The Oral Cigarettes</span></a></div>
 
 					<!--
 						<div><a href="https://youtu.be/7-EwChG1WTA">Laid-Back Camp, "SHINY DAYS" by Asaka</a></div>
@@ -257,11 +257,11 @@
 				
 				<div class="main-item tab-favorite"><!--EDs-->
 					<h2>Anime EDs</h2>
-					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/j3SlUmr_T4g"><span class="song-anime">Blood Blockade Battlefront,</span>"Sugar Song to Bitter Step" by Unison Square Garden</a></div>
-					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/-eYK3YP524A"><span class="song-anime">Soul Eater,</span>"Papermoon" by Tommy heavenly6</a></div>
-					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/wwQGn-5A2HE"><span class="song-anime">Fire Force,</span>"Veil" by Keina Suda</a></div>
-					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/i8Yjk7KedVg"><span class="song-anime">Mob Psycho 100,</span>"Refrain Boy" by von ALL OFF</a></div>
-					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/2bm2WmWiohw"><span class="song-anime">Kobayashi's Dragon Maid,</span>"Hukan Communication" by Yuki Kuwahara</a></div>					
+					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/j3SlUmr_T4g"><span class="song-anime">Blood Blockade Battlefront,</span><span class="song-title">"Sugar Song to Bitter Step" by Unison Square Garden</span></a></div>
+					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/-eYK3YP524A"><span class="song-anime">Soul Eater,</span><span class="song-title">"Papermoon" by Tommy heavenly6</span></a></div>
+					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/wwQGn-5A2HE"><span class="song-anime">Fire Force,</span><span class="song-title">"Veil" by Keina Suda</span></a></div>
+					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/i8Yjk7KedVg"><span class="song-anime">Mob Psycho 100,</span><span class="song-title">"Refrain Boy" by von ALL OFF</span></a></div>
+					<div class="box-list-tiem"><a class="box-list-header" href="https://youtu.be/2bm2WmWiohw"><span class="song-anime">Kobayashi's Dragon Maid,</span><span class="song-title">"Hukan Communication" by Yuki Kuwahara</span></a></div>					
 				
 					<!--
 						log horizon 2
