update fix irght side and cleanup code

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<p class="bioextra-item"><i class="far fa-calendar" aria-hidden="true"></i> Watching Since 2002</p>
 					<p class="bioextra-item"><i class="far fa-heart"></i> Waifu: <img class="waifu" src="assets/images/icons/waifu.png"></img> Shirayuki</p>		
 				</div>
-			</div><!--bio-->
+			</div><!--left-side-container-->
 
 			<div class="page-item tab-container">
 				<div class="tab-item">Spotlight</div>
@@ -274,9 +274,9 @@
 				<!-- fun facts -->				
 			</div><!--main-->
 			
-			<div class="page-item side-container tab-linksandfollows">
+			<div class="page-item right-side-container tab-linksandfollows">
 				<!--<h2>Links and Follows</h2>-->
-				<!--<div class="side-item stack-list-container">
+				<!--<div class="right-side-item stack-list-container">
 					<h3 class="stack-heading"></h3>				
 					<div class="stack-item">
 						<a class="stack-link" href="">
@@ -286,7 +286,7 @@
 					</div>
 				</div>-->	
 
-				<div class="side-item stack-list-container">
+				<div class="right-side-item stack-list-container">
 					<h3 class="stack-heading">Anime General</h3>				
 					<div class="stack-item">
 						<a class="stack-link" href="https://www.livechart.me/">
@@ -319,7 +319,7 @@
 						</a>
 					</div>					
 				</div>				
-				<div class="side-item stack-list-container">
+				<div class="right-side-item stack-list-container">
 					<h3 class="stack-heading">The Dubs</h3>				
 					<div class="stack-item">
 						<a class="stack-link" href="https://www.english-dubbed.com/">
@@ -358,7 +358,7 @@
 						</a>
 					</div>					
 				</div>	
-				<div class="side-item stack-list-container">
+				<div class="right-side-item stack-list-container">
 					<h3 class="stack-heading">For Collections</h3>				
 					<div class="stack-item">
 						<a class="stack-link" href="https://www.english-dubbed.com/knowledge-bazaar/upcoming-english-dubbed-release-dates/">
@@ -385,7 +385,7 @@
 						</a>
 					</div>					
 				</div>			
-				<div class="side-item stack-list-container">
+				<div class="right-side-item stack-list-container">
 					<h3 class="stack-heading">Anitube</h3>				
 					<div class="stack-item">
 						<a class="stack-link" href="https://www.youtube.com/channel/UC7dF9qfBMXrSlaaFFDvV_Yg">
@@ -418,7 +418,7 @@
 						</a>
 					</div>					
 				</div>	
-				<div class="side-item stack-list-container">
+				<div class="right-side-item stack-list-container">
 					<h3 class="stack-heading">Image Scrolling</h3>				
 					<div class="stack-item">
 						<a class="stack-link" href="https://www.reddit.com/r/Animewallpaper/">
