--- a/index.html
+++ b/index.html
@@ -160,8 +160,10 @@
 						<div class="tile"><a href="https://kitsu.io/anime/princess-mononoke"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/142/large.jpg?1431655766" alt="Princess Mononoke"></img></a></div>
 						<div class="tile"><a href="https://kitsu.io/anime/sayonara-no-asa-ni-yakusoku-no-hana-wo-kazarou"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/13612/large.jpg?1514518724" alt="Maquia"></img></a></div>
 						<div class="tile"><a href="https://kitsu.io/anime/kimi-no-suizou-wo-tabetai"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/13723/large.jpg?1553514369" alt="I Want to Eat Your Pancreas"></img></a></div>
-
-						<!--<div class="tile"><a href="https://kitsu.io/anime/the-garden-of-words"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7515/large.jpg?1408461581" alt="The Garden of Words"></img></a></div>-->
+						<div class="tile"><a href="https://kitsu.io/anime/promare"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/13602/large.jpg?1590229475" alt="Promare"></img></a></div>
+						<div class="tile"><a href="https://kitsu.io/anime/kono-sekai-no-katasumi-ni"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7234/large.jpg?1474588582" alt="In This Corner of the World"></img></a></div>
+						<div class="tile"><a href="https://kitsu.io/anime/penguin-highway"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/41007/large.jpg?1531794448" alt="Penguin Highway"></img></a></div>
+						<div class="tile"><a href="https://kitsu.io/anime/the-garden-of-words"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7515/large.jpg?1408461581" alt="The Garden of Words"></img></a></div>
 					</div>
 				</div><!--anime film-->
 				
@@ -169,6 +171,7 @@
 					<h2>Other Animated Series</h2>
 					<div class="tiled-list">
 						<div class="tile"><a href="https://kitsu.io/anime/avatar-the-last-airbender-book-1-water"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7936/large.jpg?1458164050" alt="Avatar: The Last Airbender"></img></a></div>
+						<div class="tile"><a href="https://kitsu.io/anime/the-legend-of-korra-book-1-air"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/11565/large.jpg?1448849149" alt="The Legend of Korra"></img></a></div>
 						<div class="tile"><a href="https://kitsu.io/anime/rwby"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7929/large.jpg?1475799620" alt="RWBY"></img></a></div>
 						<div class="tile"><a href="https://kitsu.io/anime/wakfu-the-animated-series"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/8299/large.jpg?1418849115" alt="Wakfu"></img></a></div>
 						<div class="tile"><a href="https://kitsu.io/anime/samurai-jack"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7939/large.jpg?1416275562" alt="Samurai Jack"></img></a></div>
@@ -176,8 +179,9 @@
 						<div class="tile"><a href="https://www.imdb.com/title/tt0149460/?ref_=nv_sr_1"><img class="thumbnail" src="assets/images/thumbnails/futurama.png" alt="Futurama"></img></a></div>
 						<div class="tile"><a href="https://www.imdb.com/title/tt1486217/?ref_=nv_sr_1"><img class="thumbnail" src="assets/images/thumbnails/archer.png" alt="Archer"></img></a></div>						
 						<div class="tile"><a href="https://kitsu.io/anime/teen-titans"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7928/large.jpg?1416275545" alt="Teen Titans"></img></a></div>						
-
-						<!--<div class="tile"><a href="https://www.imdb.com/title/tt0366005/"><img class="thumbnail" src="assets/images/thumbnails/dannyphantom.png" alt="Danny Phantom"></img></a></div>-->
+						<div class="tile"><a href="https://www.imdb.com/title/tt0366005/"><img class="thumbnail" src="assets/images/thumbnails/dannyphantom.png" alt="Danny Phantom"></img></a></div>
+						<div class="tile"><a href="https://kitsu.io/anime/xiaolin-showdown"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7931/large.jpg?1408462962" alt="Xiaolin Showdown"></img></a></div>
+						<div class="tile"><a href="https://kitsu.io/anime/code-lyoko"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7930/large.jpg?1408462959" alt="Code Lyoko"></img></a></div>
 					</div>
 				</div><!--Other Animated Series-->
 
