fixed broken image

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 					</div>
 					<div class="stack-item">
 						<a class="stack-link" href="https://www.reddit.com/r/AquaSama/">
-							<img class="stack-image" src="https://styles.redditmedia.com/t5_3fzrx/styles/communityIcon_s8fvhy9mxzp21.jpg?format=pjpg&s=741c736989f1ab93eaada100394b87cd08c04aec"></img>
+							<img class="stack-image" src="https://styles.redditmedia.com/t5_3fzrx/styles/communityIcon_5yyq866pjiq41.jpg?width=256&format=pjpg&s=623e88facc79dd08b0eddde05760799aa92200d3"></img>
 							<span class="stack-text">r/AquaSama</span>
 						</a>
 					</div>
