--- a/index.html
+++ b/index.html
@@ -352,13 +352,13 @@
 					</div>		
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/MarissaLenti">
-							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1236192399363321857/-rUMUAKQ_400x400.jpg"></img>
+							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1267513418443034624/wGt7VtMk_400x400.jpg"></img>
 							<span class="stack-text">@MarissaLenti</span>
 						</a>
 					</div>					
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/KylePhillipsFUN">
-							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1231636419359232000/4MNk1HPX_400x400.jpg"></img>
+							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1268298004483772417/h2BgdS-U_400x400.jpg"></img>
 							<span class="stack-text">@KylePhillipsFUN</span>
 						</a>
 					</div>					
@@ -421,16 +421,46 @@
 							<img class="stack-image" src="https://yt3.ggpht.com/-5-b4M5s6G1g/AAAAAAAAAAI/AAAAAAAAAAA/Zcxn0pEyP8E/s288-mo-c-c0xffffffff-rj-k-no/photo.jpg"></img>
 							<span class="stack-text">Under The Scope</span>
 						</a>
+					</div>
+					<div class="stack-item">
+						<a class="stack-link" href="https://www.youtube.com/channel/UC1ZjO5p5aDezRxzNVYQfg4Q">
+							<img class="stack-image" src="https://yt3.ggpht.com/a/AATXAJyExDAi2hvzKG0KjaLSfCgQWSgTSSwZo7a0ysNn4g=s176-c-k-c0xffffffff-no-rj-mo"></img>
+							<span class="stack-text">Aaox</span>
+						</a>
+					</div>
+					<div class="stack-item">
+						<a class="stack-link" href="https://www.youtube.com/channel/UCcmxOGYGF51T1XsqQLewGtQ">
+							<img class="stack-image" src="https://yt3.ggpht.com/a/AATXAJw3KmdgUVbLM03xZ5lC1TOimg08c2U4KDf9dp3C=s176-c-k-c0xffffffff-no-rj-mo"></img>
+							<span class="stack-text">Trash Taste</span>
+						</a>
 					</div>					
 				</div>	
 				<div class="right-side-item stack-list-container">
-					<h3 class="stack-heading">Image Scrolling</h3>				
+					<h3 class="stack-heading">Anipics on Reddit</h3>				
 					<div class="stack-item">
 						<a class="stack-link" href="https://www.reddit.com/r/Animewallpaper/">
 							<img class="stack-image" src="https://styles.redditmedia.com/t5_2ss60/styles/communityIcon_bx5asf07hi711.png"></img>
 							<span class="stack-text">r/Animewallpaper</span>
 						</a>
 					</div>
+					<div class="stack-item">
+						<a class="stack-link" href="https://www.reddit.com/r/Pixiv/">
+							<img class="stack-image" src="https://a.thumbs.redditmedia.com/odd9NxN0KHzNFc8jDhXnxIMb3MvhMaopilBqGq7NnW0.png"></img>
+							<span class="stack-text">r/Pixiv</span>
+						</a>
+					</div>
+					<div class="stack-item">
+						<a class="stack-link" href="https://www.reddit.com/r/anime/?f=flair_name%3A%22OC%20Fanart%22">
+							<img class="stack-image" src="https://b.thumbs.redditmedia.com/3Nje2BVH25RqYFX3Aod8R26GkHFzBYTep3TddA3960Q.png"></img>
+							<span class="stack-text">r/Anime OC Fanart</span>
+						</a>
+					</div>					
+					<div class="stack-item">
+						<a class="stack-link" href="https://www.reddit.com/r/ImaginarySliceOfLife/">
+							<img class="stack-image" src="https://b.thumbs.redditmedia.com/MLO5GnkT-lxqK_d-7zZjA77WCLjDq8qPjU-BpOfzWOs.png"></img>
+							<span class="stack-text">r/ImaginarySliceOfLife</span>
+						</a>
+					</div>					
 					<div class="stack-item">
 						<a class="stack-link" href="https://www.reddit.com/r/awwnime/">
 							<img class="stack-image" src="https://b.thumbs.redditmedia.com/ijZapWdhc7PDif8CfSDhvp9G2wYAtc877Sy74vQ8yfI.png"></img>
@@ -456,18 +486,6 @@
 						</a>
 					</div>
 					<div class="stack-item">
-						<a class="stack-link" href="https://www.reddit.com/r/ImaginarySliceOfLife/">
-							<img class="stack-image" src="https://b.thumbs.redditmedia.com/MLO5GnkT-lxqK_d-7zZjA77WCLjDq8qPjU-BpOfzWOs.png"></img>
-							<span class="stack-text">r/ImaginarySliceOfLife</span>
-						</a>
-					</div>
-					<div class="stack-item">
-						<a class="stack-link" href="https://www.reddit.com/r/Pixiv/">
-							<img class="stack-image" src="https://a.thumbs.redditmedia.com/odd9NxN0KHzNFc8jDhXnxIMb3MvhMaopilBqGq7NnW0.png"></img>
-							<span class="stack-text">r/Pixiv</span>
-						</a>
-					</div>
-					<div class="stack-item">
 						<a class="stack-link" href="https://www.reddit.com/r/twintails/">
 							<img class="stack-image" src="assets/images/icons/reddit-icon.jpg"></img>
 							<span class="stack-text">r/twintails</span>
@@ -479,24 +497,69 @@
 							<span class="stack-text">r/ZettaiRyouiki</span>
 						</a>
 					</div>
+				</div>				
+				<div class="right-side-item stack-list-container">
+					<h3 class="stack-heading">Anipics on Twitter</h3>
+					<div class="stack-item">
+						<a class="stack-link" href="https://twitter.com/jeonghee1414">
+							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1206565154265022465/5gW2b9qE_400x400.jpg"></img>
+							<span class="stack-text">モ誰 @jeonghee1414</span>
+						</a>
+					</div>
+					<div class="stack-item">
+						<a class="stack-link" href="https://twitter.com/Cheon1986">
+							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1129038158245617666/eCAhjvIE_400x400.png"></img>
+							<span class="stack-text">HxxG / ホン @Cheon1986</span>
+						</a>
+					</div>																	
+					<div class="stack-item">
+						<a class="stack-link" href="https://twitter.com/hitsukuya/media">
+							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1143037931764047872/s-wgwjvK_400x400.png"></img>
+							<span class="stack-text">Hitsu @hitsukuya</span>
+						</a>
+					</div>												
+					<div class="stack-item">
+						<a class="stack-link" href="https://twitter.com/mychristian2">
+							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1274717457102434306/_CmJr9G9_400x400.jpg"></img>
+							<span class="stack-text">사야*SAYA*さや @mychristian2</span>
+						</a>
+					</div>							
+					<div class="stack-item">
+						<a class="stack-link" href="https://twitter.com/dnwls3010/media">
+							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1215640203508867072/M_c7Qdgz_400x400.jpg"></img>
+							<span class="stack-text">후와리ふわり @dnwls3010</span>
+						</a>
+					</div>												
+					<div class="stack-item">
+						<a class="stack-link" href="https://twitter.com/Ixy">
+							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1212051209973972992/J1JhjJCH_400x400.jpg"></img>
+							<span class="stack-text">Ixy @Ixy</span>
+						</a>
+					</div>					
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/Merryweatherey">
 							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1169566661382475776/EX8mkHW2_400x400.jpg"></img>
-							<span class="stack-text">@Merryweatherey</span>
+							<span class="stack-text">「Merry」 @Merryweatherey</span>
 						</a>
 					</div>
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/sasurainopink">
 							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1238741536440909824/3R4lczhK_400x400.jpg"></img>
-							<span class="stack-text">@sasurainopink</span>
+							<span class="stack-text">牧茶 @sasurainopink</span>
 						</a>
 					</div>
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/mojojoj27827860">
 							<img class="stack-image" src="https://pbs.twimg.com/profile_images/455061866524315648/-07KkKx2_400x400.jpeg"></img>
-							<span class="stack-text">@mojojoj27827860</span>
+							<span class="stack-text">いえすぱ @mojojoj27827860</span>
 						</a>
 					</div>							
+					<div class="stack-item">
+						<a class="stack-link" href="https://twitter.com/mu_acrt/media">
+							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1280726732400517121/27FYqXEk_400x400.jpg"></img>
+							<span class="stack-text">はねんぼ @mu_acrt</span>
+						</a>
+					</div>					
 				</div>
 			</div>
 			
